fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,1 @@
-.App {
-  width: 100%;
-  height: 100%;
-  margin: 0px !important;
-  padding: 0px !important;
-}
+
