--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,18 @@
 * {
-  box-sizing: border-box;
-}
-
-#root {
-  width: 100%;
-  height: 100%;
+  box-sizing: border-box !important;
 }
 
 html,
 body {
   margin: 0px !important;
   padding: 0px !important;
+  width: 100svw !important;
+  height: 100svh !important;
+  overflow-x: hidden !important;
 }
 
-body {
-  height: 100vh;
-  overflow-x: hidden;
+#root {
+  width: 100% !important;
+  height: 100% !important;
+  overflow-x: hidden !important;
 }
