--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -1,6 +1,4 @@
 #main-layout {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
   background-color: #d9d9d9;
@@ -19,7 +17,7 @@
   }
 
   .content-height {
-    height: 90%;
+    min-height: 90%;
   }
 
   .footer-height {
